--- a/MyNewsWeb/Views/Home/Contact.cshtml
+++ b/MyNewsWeb/Views/Home/Contact.cshtml
@@ -1,17 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact Us";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    31 Ames Avenue<br />
+    Carnegie, 3163<br />
+    <abbr title="Phone">P: 0457798791</abbr>
 </address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3148.632597864109!2d145.059500315321!3d-37.892273979738306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad66a3aa390e929%3A0xe21317128e2c4248!2s31+Ames+Ave%2C+Carnegie+VIC+3163!5e0!3m2!1sen!2sau!4v1508415430761" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
