--- a/MyNewsWeb/Views/Shared/_Layout.cshtml
+++ b/MyNewsWeb/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                         }
                     }
                     <li>@Html.ActionLink("Documentation", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
