--- a/MyNewsWeb/Views/News/ManageNews.cshtml
+++ b/MyNewsWeb/Views/News/ManageNews.cshtml
@@ -18,40 +18,42 @@
 }
 else
 {
-    <select id="selectNews">
-        <option>Title</option>
-        <option>Content</option>
-        <option>News Image</option>
-        <option>News Type</option>
-        <option>Author</option>
-        <option>News Date</option>
-    </select>
-    <br>
-    <table class="table" id="newsid">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Title)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Content)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FileName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.NewsType)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.UserInfoId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.NewsDate)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tfoot>
+    <div>
+
+        <select id="selectNews">
+            <option>Title</option>
+            <option>Content</option>
+            <option>News Image</option>
+            <option>News Type</option>
+            <option>Author</option>
+            <option>News Date</option>
+        </select>
+        <br>
+        <table class="table" id="newsid">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Title)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Content)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.FileName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NewsType)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.UserInfoId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NewsDate)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tfoot>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
@@ -71,39 +73,47 @@ else
                 @Html.DisplayNameFor(model => model.NewsDate)
             </th>
             <th></th>
-        </tfoot>
+            </tfoot>
 
-        <tbody>
-            @foreach (var item in Model)
+            <tbody>
+                @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Content)
-                    </td>
-                    <td>
-                        <img src="@Url.Content("~/Content/Uploads/" + item.FileName)" alt="News Image Not Available" height="100" width="100" />
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.NewsType)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.NewsDate)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Content)
+                </td>
+                <td>
+                    <img src="@Url.Content("~/Content/Uploads/" + item.FileName)" alt="News Image Not Available" height="100" width="100" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NewsType)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NewsDate)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
             }
-        </tbody>
+            </tbody>
 
-    </table>
+        </table>
+    </div>
+
+
+    <div ng-controller="newsTypeCtrl" style="height:400px; width: 400px; text-align: center">
+        <h1>News Type Number</h1>
+        <canvas id="pie" class="chart chart-pie"
+                chart-data="data" chart-labels="labels" chart-options="options" style="height: 100px; width: 100px"></canvas>
+    </div>
 }
  
 
